# lua-live2d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
